# parallel-divisor-function

./: .dockerignore  .gitignore  .tasks  CMakeLists.txt  Dockerfile  Makefile  README.md  zipfiles_hybrid.sh
doc/: doc.tex
dochybrid/: doc.bib  doc.tex
src/: df_utils.c  df_utils.h  dfpack.c  dfpack.h  divisor_function_utils.c  divisor_function_utils.h  dlinked_list.c  dlinked_list.h  main.c  parallel.c  serial.c  serial_blocks.c  serial_divisor_function.c  serial_divisor_function.h  utils.c  utils.h
test/: df.py  generate_bases  print.py  random_numbers.py  requirements.txt  run_bases  tables.py
